--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,3 +13,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/Blueprints/PhilGamemode.PhilGamemode_C
 
+[/Script/Engine.PhysicsSettings]
+DefaultGravityZ=-1143.000000
+
